@@ -1,6 +1,8 @@
 package gh2;
 
 import java.util.LinkedList;
+
+import deque.ArrayDeque;
 import deque.Deque;
 
 // TODO: maybe more imports
@@ -17,11 +19,7 @@ public class GuitarString {
     /* Buffer for storing sound data. */
     // TODO: uncomment the following line once you're ready to start this portion
     private Deque<Double> buffer;
-        int capacity = (int) Math.round(SR / frequency);
-        buffer = new LinkedList<>();
-        for (int i = 0; i < capacity; i++) {
-            buffer.addLast(0.0);
-    }
+
 
     /* Create a guitar string of the given frequency.  */
     public GuitarString(double frequency) {
@@ -29,10 +27,10 @@ public class GuitarString {
         //       cast the result of this division operation into an int. For
         //       better accuracy, use the Math.round() function before casting.
         //       Your should initially fill your buffer array with zeros.
-        int capacity = (int) Math.round(SAMPLE_RATE / frequency);
-        deque = new LinkedList<>();
-        for (int i = 0; i < capacity; i++) {
-            deque.addLast(0.0);
+        buffer = new ArrayDeque<>();
+        int cap = (int) Math.round(SR/frequency);
+        for (int x = 0; x < cap; x++) {
+            buffer.addFirst(0.0);
         }
 
     }
@@ -48,11 +46,11 @@ public class GuitarString {
         //       other. This does not mean that you need to check that the numbers
         //       are different from each other. It means you should repeatedly call
         //       Math.random() - 0.5 to generate new random numbers for each array index.
-
-        for (int i = 0; i < buffer.size(); i++) {
+        for (int x = 0; x < buffer.size(); x++) {
             double r = Math.random() - 0.5;
             buffer.removeFirst(); // Remove the old value
-            buffer.addLast(r);   // Add the new random value
+            buffer.addFirst(r);
+
         }
     }
 
@@ -63,29 +61,17 @@ public class GuitarString {
         // TODO: Dequeue the front sample and enqueue a new sample that is
         //       the average of the two multiplied by the DECAY factor.
         //       **Do not call StdAudio.play().**
-        if (isEmpty()) {
-            throw new UnsupportedOperationException("Deque is empty.");
-        }
-
-        // Remove the front double
-        double front = buffer.removeFirst();
-
-        // Get the next double in the deque
-        double next = buffer.getFirst();
-
-        // Calculate newDouble as per the algorithm
-        double newDouble = DECAY_FACTOR * 0.5 * (front + next);
-
-        // Add newDouble to the back of the deque
-        deque.addLast(newDouble);
-
-
+        double one = buffer.get(0);
+        double two = buffer.get(1);
+        double avg = ((one + two) / 2) * DECAY;
+        buffer.removeFirst();
+        buffer.addLast(avg);
     }
 
     /* Return the double at the front of the buffer. */
     public double sample() {
         // TODO: Return the correct thing.
-        return buffer.getFirst();
+        return buffer.get(0);
     }
 }
     // TODO: Remove all comments that say TODO when you're done.
